[package]
name = "auxcpu-byondapi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
auxcpu-core = { path = "../core" }
meowtonin = { git = "https://github.com/Absolucy/meowtonin" }

[lints]
workspace = true
