[package]
name = "auxcpu-core"
description = "Get 'true' CPU values in BYOND."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
auxcpu-impl = { path = "../impl" }
auxcpu-sigscan = { path = "../sigscan" }
cfg-if = "1"

[lints]
workspace = true
