[package]
name = "auxcpu-impl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro"] }

[lints]
workspace = true
